 * OTHER CHANGES:
   * Added "Start when I log on" option
   * Added "Not responding" text to tray icon rich pop-up for programs that are hung
   * Added right-click menu and double-click action for environment variables
   * Added Time stamp column for processes
   * Added -sysinfo command line parameter for opening System Information at startup
   * The pop-up UI no longer displays when double-clicking the tray icon
   * Improved performance when handling a large number of threads, modules or handles
   * Fixed ASLR state being shown as N/A in process properties
   * Fixed multi monitor window placement bug
   * Fixed handle enumeration bug affecting processes with PID >= 65536
   * Fixed Interrupts being missing from the max CPU usage history

2.37
 * HIGHLIGHTS:
   * Updated for Windows 10
   * The "Include CPU (and other) usage of children in collapsed processes" option now aggregates memory and I/O statistics
   * Added regex search to "Find Handles or DLLs"
   * Added process exit codes to log
   * Fixed crash that occurred under some conditions when processes terminated
 * OTHER CHANGES:
   * Added warning when trying to search for handles when the system has too many handles open
   * Upgraded to PCRE2
   * Updated DotNetTools plugin:
     * Rewrite of .NET Performance statistics and AppDomain enumeration
   * Updated OnlineChecks plugin:
     * Fixed virusscan.jotti.org uploader
   * Updated NetAdapters plugin:
     * Added adapter details window
   * Updated ToolStatus plugin:
     * Added CPU, Memory and I/O graphs to the toolbar (not enabled by default)
     * Added toolbar and status bar customization, as well as a new theme
     * Added option to auto-hide the main menu
   * Updated UserNotes plugin:
     * Added individual process highlighting support

2.36
 * HIGHLIGHTS:
   * New rich pop-up UI when hovering the cursor over a tray icon, showing the most active processes