@@ -22,19 +22,8 @@
 
 #include <phbase.h>
 #include <workqueue.h>
+#include <workqueuep.h>
 #include <phintrnl.h>
-
-HANDLE PhpGetSemaphoreWorkQueue(
-    _Inout_ PPH_WORK_QUEUE WorkQueue
-    );
-
-BOOLEAN PhpCreateWorkQueueThread(
-    _Inout_ PPH_WORK_QUEUE WorkQueue
-    );
-
-NTSTATUS PhpWorkQueueThreadStart(
-    _In_ PVOID Parameter
-    );
 
 static PH_INITONCE PhWorkQueueInitOnce = PH_INITONCE_INIT;
 static PH_FREE_LIST PhWorkQueueItemFreeList;
@@ -44,39 +33,6 @@ static PH_WORK_QUEUE PhGlobalWorkQueue;
 PPH_LIST PhDbgWorkQueueList;
 PH_QUEUED_LOCK PhDbgWorkQueueListLock = PH_QUEUED_LOCK_INIT;
 #endif
-
-FORCEINLINE PPH_WORK_QUEUE_ITEM PhpCreateWorkQueueItem(
-    _In_ PUSER_THREAD_START_ROUTINE Function,
-    _In_opt_ PVOID Context,
-    _In_opt_ PPH_WORK_QUEUE_ITEM_DELETE_FUNCTION DeleteFunction
-    )
-{
-    PPH_WORK_QUEUE_ITEM workQueueItem;
-
-    workQueueItem = PhAllocateFromFreeList(&PhWorkQueueItemFreeList);
-    workQueueItem->Function = Function;
-    workQueueItem->Context = Context;
-    workQueueItem->DeleteFunction = DeleteFunction;
-
-    return workQueueItem;
-}
-
-FORCEINLINE VOID PhpDestroyWorkQueueItem(
-    _In_ PPH_WORK_QUEUE_ITEM WorkQueueItem
-    )
-{
-    if (WorkQueueItem->DeleteFunction)
-        WorkQueueItem->DeleteFunction(WorkQueueItem->Function, WorkQueueItem->Context);
-
-    PhFreeToFreeList(&PhWorkQueueItemFreeList, WorkQueueItem);
-}
-
-FORCEINLINE VOID PhpExecuteWorkQueueItem(
-    _Inout_ PPH_WORK_QUEUE_ITEM WorkQueueItem
-    )
-{
-    WorkQueueItem->Function(WorkQueueItem->Context);
-}
 
 /**
  * Initializes a work queue.
@@ -192,6 +148,197 @@ VOID PhWaitForWorkQueue(
     PhReleaseQueuedLockExclusive(&WorkQueue->QueueLock);
 }
 
+/**
+ * Queues a work item to a work queue.
+ *
+ * \param WorkQueue A work queue object.
+ * \param Function A function to execute.
+ * \param Context A user-defined value to pass to the function.
+ */
+VOID PhQueueItemWorkQueue(
+    _Inout_ PPH_WORK_QUEUE WorkQueue,
+    _In_ PUSER_THREAD_START_ROUTINE Function,
+    _In_opt_ PVOID Context
+    )
+{
+    PhQueueItemWorkQueueEx(WorkQueue, Function, Context, NULL, NULL);
+}
+
+/**
+ * Queues a work item to a work queue.
+ *
+ * \param WorkQueue A work queue object.
+ * \param Function A function to execute.
+ * \param Context A user-defined value to pass to the function.
+ * \param DeleteFunction A callback function that is executed when the work queue item is about to
+ * be freed.
+ * \param Environment Execution environment parameters (e.g. priority).
+ */
+VOID PhQueueItemWorkQueueEx(
+    _Inout_ PPH_WORK_QUEUE WorkQueue,
+    _In_ PUSER_THREAD_START_ROUTINE Function,
+    _In_opt_ PVOID Context,
+    _In_opt_ PPH_WORK_QUEUE_ITEM_DELETE_FUNCTION DeleteFunction,
+    _In_opt_ PPH_WORK_QUEUE_ENVIRONMENT Environment
+    )
+{
+    PPH_WORK_QUEUE_ITEM workQueueItem;
+
+    workQueueItem = PhpCreateWorkQueueItem(Function, Context, DeleteFunction, Environment);
+
+    // Enqueue the work item.
+    PhAcquireQueuedLockExclusive(&WorkQueue->QueueLock);
+    InsertTailList(&WorkQueue->QueueListHead, &workQueueItem->ListEntry);
+    _InterlockedIncrement(&WorkQueue->BusyCount);
+    PhReleaseQueuedLockExclusive(&WorkQueue->QueueLock);
+    // Signal the semaphore once to let a worker thread continue.
+    NtReleaseSemaphore(PhpGetSemaphoreWorkQueue(WorkQueue), 1, NULL);
+
+    PHLIB_INC_STATISTIC(WqWorkItemsQueued);
+
+    // Check if all worker threads are currently busy, and if we can create more threads.
+    if (WorkQueue->BusyCount >= WorkQueue->CurrentThreads &&
+        WorkQueue->CurrentThreads < WorkQueue->MaximumThreads)
+    {
+        // Lock and re-check.
+        PhAcquireQueuedLockExclusive(&WorkQueue->StateLock);
+
+        if (WorkQueue->CurrentThreads < WorkQueue->MaximumThreads)
+            PhpCreateWorkQueueThread(WorkQueue);
+
+        PhReleaseQueuedLockExclusive(&WorkQueue->StateLock);
+    }
+}
+
+VOID PhInitializeWorkQueueEnvironment(
+    _Out_ PPH_WORK_QUEUE_ENVIRONMENT Environment
+    )
+{
+    PhpGetDefaultWorkQueueEnvironment(Environment);
+}
+
+/** Returns a pointer to the default shared work queue. */
+PPH_WORK_QUEUE PhGetGlobalWorkQueue(
+    VOID
+    )
+{
+    if (PhBeginInitOnce(&PhGlobalWorkQueueInitOnce))
+    {
+        PhInitializeWorkQueue(
+            &PhGlobalWorkQueue,
+            0,
+            3,
+            1000
+            );
+        PhEndInitOnce(&PhGlobalWorkQueueInitOnce);
+    }
+
+    return &PhGlobalWorkQueue;
+}
+
+VOID PhQueueItemGlobalWorkQueue(PUSER_THREAD_START_ROUTINE Function, PVOID Context)
+{
+    PhQueueItemWorkQueue(PhGetGlobalWorkQueue(), Function, Context);
+}
+
+VOID PhpGetDefaultWorkQueueEnvironment(
+    _Out_ PPH_WORK_QUEUE_ENVIRONMENT Environment
+    )
+{
+    memset(Environment, 0, sizeof(PH_WORK_QUEUE_ENVIRONMENT));
+    Environment->BasePriority = 0;
+    Environment->IoPriority = IoPriorityNormal;
+    Environment->PagePriority = MEMORY_PRIORITY_NORMAL;
+    Environment->ForceUpdate = FALSE;
+}
+
+VOID PhpUpdateWorkQueueEnvironment(
+    _Inout_ PPH_WORK_QUEUE_ENVIRONMENT CurrentEnvironment,
+    _In_ PPH_WORK_QUEUE_ENVIRONMENT NewEnvironment
+    )
+{
+    if (CurrentEnvironment->BasePriority != NewEnvironment->BasePriority || NewEnvironment->ForceUpdate)
+    {
+        LONG increment;
+
+        increment = NewEnvironment->BasePriority;
+
+        if (NT_SUCCESS(NtSetInformationThread(NtCurrentThread(), ThreadBasePriority,
+            &increment, sizeof(LONG))))
+        {
+            CurrentEnvironment->BasePriority = NewEnvironment->BasePriority;
+        }
+    }
+
+    if (WindowsVersion >= WINDOWS_VISTA)
+    {
+        if (CurrentEnvironment->IoPriority != NewEnvironment->IoPriority || NewEnvironment->ForceUpdate)
+        {
+            IO_PRIORITY_HINT ioPriority;
+
+            ioPriority = NewEnvironment->IoPriority;
+
+            if (NT_SUCCESS(NtSetInformationThread(NtCurrentThread(), ThreadIoPriority,
+                &ioPriority, sizeof(IO_PRIORITY_HINT))))
+            {
+                CurrentEnvironment->IoPriority = NewEnvironment->IoPriority;
+            }
+        }
+
+        if (CurrentEnvironment->PagePriority != NewEnvironment->PagePriority || NewEnvironment->ForceUpdate)
+        {
+            ULONG pagePriority;
+
+            pagePriority = NewEnvironment->PagePriority;
+
+            if (NT_SUCCESS(NtSetInformationThread(NtCurrentThread(), ThreadPagePriority,
+                &pagePriority, sizeof(ULONG))))
+            {
+                CurrentEnvironment->PagePriority = NewEnvironment->PagePriority;
+            }
+        }
+    }
+}
+
+PPH_WORK_QUEUE_ITEM PhpCreateWorkQueueItem(
+    _In_ PUSER_THREAD_START_ROUTINE Function,
+    _In_opt_ PVOID Context,
+    _In_opt_ PPH_WORK_QUEUE_ITEM_DELETE_FUNCTION DeleteFunction,
+    _In_opt_ PPH_WORK_QUEUE_ENVIRONMENT Environment
+    )
+{
+    PPH_WORK_QUEUE_ITEM workQueueItem;
+
+    workQueueItem = PhAllocateFromFreeList(&PhWorkQueueItemFreeList);
+    workQueueItem->Function = Function;
+    workQueueItem->Context = Context;
+    workQueueItem->DeleteFunction = DeleteFunction;
+
+    if (Environment)
+        workQueueItem->Environment = *Environment;
+    else
+        PhpGetDefaultWorkQueueEnvironment(&workQueueItem->Environment);
+
+    return workQueueItem;
+}
+
+VOID PhpDestroyWorkQueueItem(
+    _In_ PPH_WORK_QUEUE_ITEM WorkQueueItem
+    )
+{
+    if (WorkQueueItem->DeleteFunction)
+        WorkQueueItem->DeleteFunction(WorkQueueItem->Function, WorkQueueItem->Context);
+
+    PhFreeToFreeList(&PhWorkQueueItemFreeList, WorkQueueItem);
+}
+
+VOID PhpExecuteWorkQueueItem(
+    _Inout_ PPH_WORK_QUEUE_ITEM WorkQueueItem
+    )
+{
+    WorkQueueItem->Function(WorkQueueItem->Context);
+}
+
 HANDLE PhpGetSemaphoreWorkQueue(
     _Inout_ PPH_WORK_QUEUE WorkQueue
     )
@@ -254,8 +401,10 @@ NTSTATUS PhpWorkQueueThreadStart(
 {
     PH_AUTO_POOL autoPool;
     PPH_WORK_QUEUE workQueue = (PPH_WORK_QUEUE)Parameter;
+    PH_WORK_QUEUE_ENVIRONMENT currentEnvironment;
 
     PhInitializeAutoPool(&autoPool);
+    PhpGetDefaultWorkQueueEnvironment(&currentEnvironment);
 
     while (TRUE)
     {
@@ -322,6 +471,7 @@ NTSTATUS PhpWorkQueueThreadStart(
             {
                 workQueueItem = CONTAINING_RECORD(listEntry, PH_WORK_QUEUE_ITEM, ListEntry);
 
+                PhpUpdateWorkQueueEnvironment(&currentEnvironment, &workQueueItem->Environment);
                 PhpExecuteWorkQueueItem(workQueueItem);
                 _InterlockedDecrement(&workQueue->BusyCount);
 
@@ -356,93 +506,4 @@ NTSTATUS PhpWorkQueueThreadStart(
     PhDeleteAutoPool(&autoPool);
 
     return STATUS_SUCCESS;
-}
-
-/**
- * Queues a work item to a work queue.
- *
- * \param WorkQueue A work queue object.
- * \param Function A function to execute.
- * \param Context A user-defined value to pass to the function.
- */
-VOID PhQueueItemWorkQueue(
-    _Inout_ PPH_WORK_QUEUE WorkQueue,
-    _In_ PUSER_THREAD_START_ROUTINE Function,
-    _In_opt_ PVOID Context
-    )
-{
-    PhQueueItemWorkQueueEx(WorkQueue, Function, Context, NULL);
-}
-
-/**
- * Queues a work item to a work queue.
- *
- * \param WorkQueue A work queue object.
- * \param Function A function to execute.
- * \param Context A user-defined value to pass to the function.
- * \param DeleteFunction A callback function that is executed when the work queue item is about to
- * be freed.
- */
-VOID PhQueueItemWorkQueueEx(
-    _Inout_ PPH_WORK_QUEUE WorkQueue,
-    _In_ PUSER_THREAD_START_ROUTINE Function,
-    _In_opt_ PVOID Context,
-    _In_opt_ PPH_WORK_QUEUE_ITEM_DELETE_FUNCTION DeleteFunction
-    )
-{
-    PPH_WORK_QUEUE_ITEM workQueueItem;
-
-    workQueueItem = PhpCreateWorkQueueItem(Function, Context, DeleteFunction);
-
-    // Enqueue the work item.
-    PhAcquireQueuedLockExclusive(&WorkQueue->QueueLock);
-    InsertTailList(&WorkQueue->QueueListHead, &workQueueItem->ListEntry);
-    _InterlockedIncrement(&WorkQueue->BusyCount);
-    PhReleaseQueuedLockExclusive(&WorkQueue->QueueLock);
-    // Signal the semaphore once to let a worker thread continue.
-    NtReleaseSemaphore(PhpGetSemaphoreWorkQueue(WorkQueue), 1, NULL);
-
-    PHLIB_INC_STATISTIC(WqWorkItemsQueued);
-
-    // Check if all worker threads are currently busy, and if we can create more threads.
-    if (WorkQueue->BusyCount >= WorkQueue->CurrentThreads &&
-        WorkQueue->CurrentThreads < WorkQueue->MaximumThreads)
-    {
-        // Lock and re-check.
-        PhAcquireQueuedLockExclusive(&WorkQueue->StateLock);
-
-        if (WorkQueue->CurrentThreads < WorkQueue->MaximumThreads)
-            PhpCreateWorkQueueThread(WorkQueue);
-
-        PhReleaseQueuedLockExclusive(&WorkQueue->StateLock);
-    }
-}
-
-/**
- * Queues a work item to the global work queue.
- *
- * \param Function A function to execute.
- * \param Context A user-defined value to pass to the function.
- */
-VOID PhQueueItemGlobalWorkQueue(
-    _In_ PUSER_THREAD_START_ROUTINE Function,
-    _In_opt_ PVOID Context
-    )
-{
-    if (PhBeginInitOnce(&PhGlobalWorkQueueInitOnce))
-    {
-        PhInitializeWorkQueue(
-            &PhGlobalWorkQueue,
-            0,
-            3,
-            1000
-            );
-        PhEndInitOnce(&PhGlobalWorkQueueInitOnce);
-    }
-
-    PhQueueItemWorkQueue(
-        &PhGlobalWorkQueue,
-        Function,
-        Context
-        );
 }
