@@ -20,8 +20,9 @@ Process Hacker
    * Added right-click menu and double-click action for environment variables
    * Added Time stamp column for processes
    * Added -sysinfo command line parameter for opening System Information at startup
-   * The pop-up UI no longer displays when double-clicking the tray icon
+   * Digital signature verification is now performed with very low I/O priority
    * Improved performance when handling a large number of threads, modules or handles
+   * The pop-up UI no longer displays when double-clicking the tray icon
    * Fixed ASLR state being shown as N/A in process properties
    * Fixed multi monitor window placement bug
    * Fixed handle enumeration bug affecting processes with PID >= 65536
